--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,14 @@
 
 <body>
   <main>
+    <topnav>
+      <div class="logo">LOGO</div>
+      <div></div>
+    </topnav>
     <h1>Journalist Security</h1>
+    Tools for </br>
+    JOURNALISTS</br>
+    to stay safe and secure </br>
   </main>
 </body>
 
