--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,10 @@
 
 <body>
   <main>
-    <topnav>
+    <menu>
       <div class="logo">LOGO</div>
-      <div></div>
-    </topnav>
+      <ul><li>one</li><li>two</li><li>three</li></ul>
+    </menu>
     <h1>Journalist Security</h1>
     Tools for </br>
     JOURNALISTS</br>
