--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,10 @@
   <main>
     <menu>
       <div class="logo">LOGO</div>
-      <ul><li>one</li><li>two</li><li>three</li></ul>
+      <ul class="menu"><li>Tools</li><li>Stories</li><li>Topics</li><li>Support</li><li>Community</li></ul>
+      <ul class="login"><li>Log in</li><li>Register</li></ul>
     </menu>
-    <h1>Journalist Security</h1>
-    Tools for </br>
-    JOURNALISTS</br>
-    to stay safe and secure </br>
+    <img src="F:\Documents\GitHub\my-first-static-web-app\src\assets\Tools for Journalists.png" alt="Tools for Journalists to stay safe and secure">
   </main>
 </body>
 
