--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       <ul class="menu"><li>Tools</li><li>Stories</li><li>Topics</li><li>Support</li><li>Community</li></ul>
       <ul class="login"><li>Log in</li><li>Register</li></ul>
     </menu>
-    <img src="F:\Documents\GitHub\my-first-static-web-app\src\assets\Tools for Journalists.png" alt="Tools for Journalists to stay safe and secure">
+    <img src="\assets\Tools for Journalists.png" alt="Tools for Journalists to stay safe and secure">
   </main>
 </body>
 
