--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+@import url("Styles.css");
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,11 +13,36 @@
   <main>
     <menu>
       <div class="logo">LOGO</div>
-      <ul class="menu"><li>Tools</li><li>Stories</li><li>Topics</li><li>Support</li><li>Community</li></ul>
-      <ul class="login"><li>Log in</li><li>Register</li></ul>
+      <div id="mainmenu">
+        <ul class="menu"><li>Tools</li><li>Stories</li><li>Topics</li><li>Support</li><li>Community</li></ul>
+      </div>
+      <div id="loginmenu" class="menu">
+        <ul class="login"><li>Log in</li><li>Register</li></ul>
+      </div>
     </menu>
-    <img src="assets/images/Tools-for-journalists.png" alt="Tools for Journalists to stay safe and secure">
+    <img src="Tools for Journalists.png" alt="Tools for Journalists to stay safe and secure">
+	  <div class="mainleft">
+		  <h2>Account Security </h2>
+		  <p>In today&rsquo;s digital age, where stories are woven from bytes and pixels, protecting our accounts and sensitive information has never been more crucial. </p>
+		  <p>Here you will explore the world of account security and learn practical tips to enhance your current practices, how to outsmart cybercriminals, and protect your invaluable work. </p>
+	  </div>
+	  <div class="mainright">
+		  <h2>Incident Response</h2>
+		  <p>Prevention is the best medicine. But even the best-laid prevention measures aren’t perfect. It’s important to have a plan for when things go wrong.</p>
+			<p>You’ll often be the first and only line of support when you’ve had an incident, so in this section, we will look at being prepared for when incidents happen and provide tools and resources to build your plan.</p>
+	  </div>
+	  <div class="mainleft">
+		  <h2>Device Security</h2>
+		  <p>Device security means protecting the hardware you use every day. This could include types of encryption for the data on your device, or it could be anti-virus or using tools to help find stolen or lost devices.</p>
+			<p>This section focuses on the physical tools you can use daily to protect your devices. </p>
+	  </div>
+	  <div class="mainright">
+		  <h2>Communication Security</h2>
+		  <p>Communication security refers to the measures you take to protect the confidentiality and integrity of your communication. Typically, this involves using encryption and other security measures to protect data in transit and prevent unauthorized access or interception of communication channels.</p>
+			<p>Communication security is particularly important for journalists, since you may be handling sensitive information and communicating with sources who require protection. By using secure communication practices, you can ensure that your communication channels and information are protected from unauthorized access or interception, which will help you maintain trust.</p>
+	  </div>
   </main>
 </body>
 
 </html>
+
