--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,10 @@
         <ul class="login"><li>Log in</li><li>Register</li></ul>
       </div>
     </menu>
+    <heading>
     <img src="Tools for Journalists.png" alt="Tools for Journalists to stay safe and secure">
+	  </heading>
+     <mainbody>
 	  <div class="mainleft">
 		  <h2>Account Security </h2>
 		  <p>In today&rsquo;s digital age, where stories are woven from bytes and pixels, protecting our accounts and sensitive information has never been more crucial. </p>
@@ -41,6 +44,7 @@
 		  <p>Communication security refers to the measures you take to protect the confidentiality and integrity of your communication. Typically, this involves using encryption and other security measures to protect data in transit and prevent unauthorized access or interception of communication channels.</p>
 			<p>Communication security is particularly important for journalists, since you may be handling sensitive information and communicating with sources who require protection. By using secure communication practices, you can ensure that your communication channels and information are protected from unauthorized access or interception, which will help you maintain trust.</p>
 	  </div>
+	  </mainbody>
   </main>
 </body>
 
