--- a/src/index.html
+++ b/src/index.html
@@ -28,16 +28,19 @@
 		  <h2>Account Security </h2>
 		  <p>In today&rsquo;s digital age, where stories are woven from bytes and pixels, protecting our accounts and sensitive information has never been more crucial. </p>
 		  <p>Here you will explore the world of account security and learn practical tips to enhance your current practices, how to outsmart cybercriminals, and protect your invaluable work. </p>
+		  <button type="button">Learn more</button>
 	  </div>
 	  <div class="mainright">
 		  <h2>Incident Response</h2>
 		  <p>Prevention is the best medicine. But even the best-laid prevention measures aren’t perfect. It’s important to have a plan for when things go wrong.</p>
 			<p>You’ll often be the first and only line of support when you’ve had an incident, so in this section, we will look at being prepared for when incidents happen and provide tools and resources to build your plan.</p>
+		   <button type="button">Learn more</button>
 	  </div>
 	  <div class="mainleft">
 		  <h2>Device Security</h2>
 		  <p>Device security means protecting the hardware you use every day. This could include types of encryption for the data on your device, or it could be anti-virus or using tools to help find stolen or lost devices.</p>
 			<p>This section focuses on the physical tools you can use daily to protect your devices. </p>
+		   <button type="button">Learn more</button>
 	  </div>
 	  <div class="mainright">
 		  <h2>Communication Security</h2>
