--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
       </div>
     </menu>
     <heading>
-    <img src="Journalism-hub.png" alt="Tools for Journalists to stay safe and secure">
+    <img src="/assets/Tools%20for%20Journalists.png" alt="Tools for Journalists to stay safe and secure">
 	  </heading>
      <mainbody>
 	  <div class="mainleft">
