--- a/src/index.html
+++ b/src/index.html
@@ -28,24 +28,23 @@
 		  <h2>Account Security </h2>
 		  <p>In today&rsquo;s digital age, where stories are woven from bytes and pixels, protecting our accounts and sensitive information has never been more crucial. </p>
 		  <p>Here you will explore the world of account security and learn practical tips to enhance your current practices, how to outsmart cybercriminals, and protect your invaluable work. </p>
-		  <button type="button">Learn more</button>
+		  <a href="https://samplephoneauth.azurewebsites.net/#/course/29/item/144" class="LearnMore" role="button">Learn more</a>
 	  </div>
 	  <div class="mainright">
 		  <h2>Incident Response</h2>
 		  <p>Prevention is the best medicine. But even the best-laid prevention measures aren’t perfect. It’s important to have a plan for when things go wrong.</p>
 			<p>You’ll often be the first and only line of support when you’ve had an incident, so in this section, we will look at being prepared for when incidents happen and provide tools and resources to build your plan.</p>
-		   <button type="button">Learn more</button>
+		   <a href="https://samplephoneauth.azurewebsites.net/#/course/31/item/148" class="btnLearnMore" role="button">Learn more</a>
 	  </div>
 	  <div class="mainleft">
-		  <h2>Device Security</h2>
-		  <p>Device security means protecting the hardware you use every day. This could include types of encryption for the data on your device, or it could be anti-virus or using tools to help find stolen or lost devices.</p>
-			<p>This section focuses on the physical tools you can use daily to protect your devices. </p>
-		   <button type="button">Learn more</button>
+		  <h2>Share your feedback</h2>
+		  <p>Thank you for participating in the pilot of our Journalist Security training. Your feedback will help us to make improvements prior to release. Please take 5-minutes to complete the form and share your feedback.  </p>
+		   <a href="https://forms.office.com/r/a245wRX0wh" class="btnLearnMore" role="button">Learn more</a>
 	  </div>
 	  <div class="mainright">
-		  <h2>Communication Security</h2>
-		  <p>Communication security refers to the measures you take to protect the confidentiality and integrity of your communication. Typically, this involves using encryption and other security measures to protect data in transit and prevent unauthorized access or interception of communication channels.</p>
-			<p>Communication security is particularly important for journalists, since you may be handling sensitive information and communicating with sources who require protection. By using secure communication practices, you can ensure that your communication channels and information are protected from unauthorized access or interception, which will help you maintain trust.</p>
+		  <h2>Microsoft Journalism Hub</h2>
+		  <p>Healthy democracies require healthy news ecosystems. Technology has played a role in the disruption of news, but it can also be an important part of the rebuilding effort. Microsoft, and its Democracy Forward program, provide a host of tools and services to help journalists and newsrooms achieve more.</p>
+		  <a href="https://www.microsoft.com/en-us/corporate-responsibility/journalism-hub" class="btnLearnMore" role="button">Learn more</a>
 	  </div>
 	  </mainbody>
   </main>
