--- a/src/index.html
+++ b/src/index.html
@@ -36,12 +36,12 @@
 		  <h2>Incident Response</h2>
 		  <p>Prevention is the best medicine. But even the best-laid prevention measures aren’t perfect. It’s important to have a plan for when things go wrong.</p>
 			<p>You’ll often be the first and only line of support when you’ve had an incident, so in this section, we will look at being prepared for when incidents happen and provide tools and resources to build your plan.</p>
-		   <a href="https://samplephoneauth.azurewebsites.net/#/course/31/item/148" class="btnLearnMore" role="button">Learn more</a>
+		   <a href="https://samplephoneauth.azurewebsites.net/#/course/31/item/148" class="LearnMore" role="button">Learn more</a>
 	  </div>
 	  <div class="mainleft">
 		  <h2>Share your feedback</h2>
 		  <p>Thank you for participating in the pilot of our Journalist Security training. Your feedback will help us to make improvements prior to release. Please take 5-minutes to complete the form and share your feedback.  </p>
-		   <a href="https://forms.office.com/r/a245wRX0wh" class="btnLearnMore" role="button">Learn more</a>
+		   <a href="https://forms.office.com/r/a245wRX0wh" class="LearnMore" role="button">Learn more</a>
 	  </div>
 	  <div class="mainright">
 		  <h2>Microsoft Journalism Hub</h2>
