--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
 		  <a href="https://samplephoneauth.azurewebsites.net/#/course/29/item/144" class="LearnMore" role="button">Learn more</a>
 	  </div>
 	  <div class="mainright">
-		  <img src="/assets/Incident-response.png">
+		  <img src="/assets/Incident-response.png" aligh="center" style="width:25%">
 		  <h2>Incident Response</h2>
 		  <p>Prevention is the best medicine. But even the best-laid prevention measures aren’t perfect. It’s important to have a plan for when things go wrong.</p>
 			<p>You’ll often be the first and only line of support when you’ve had an incident, so in this section, we will look at being prepared for when incidents happen and provide tools and resources to build your plan.</p>
