--- a/src/index.html
+++ b/src/index.html
@@ -25,14 +25,14 @@
 	  </heading>
      <mainbody>
 	  <div class="mainleft">
-		  <img src="/assets/Account-security.png" align="center" style="max-width:75%">
+		  <img src="/assets/Account-security.png">
 		  <h2>Account Security </h2>
 		  <p>In today&rsquo;s digital age, where stories are woven from bytes and pixels, protecting our accounts and sensitive information has never been more crucial. </p>
 		  <p>Here you will explore the world of account security and learn practical tips to enhance your current practices, how to outsmart cybercriminals, and protect your invaluable work. </p>
 		  <a href="https://samplephoneauth.azurewebsites.net/#/course/29/item/144" class="LearnMore" role="button">Learn more</a>
 	  </div>
 	  <div class="mainright">
-		  <img src="/assets/Incident-response.png" align="center" style="max-width:75%">
+		  <img src="/assets/Incident-response.png">
 		  <h2>Incident Response</h2>
 		  <p>Prevention is the best medicine. But even the best-laid prevention measures aren’t perfect. It’s important to have a plan for when things go wrong.</p>
 			<p>You’ll often be the first and only line of support when you’ve had an incident, so in this section, we will look at being prepared for when incidents happen and provide tools and resources to build your plan.</p>
@@ -48,7 +48,7 @@
 		  <p>Healthy democracies require healthy news ecosystems. Technology has played a role in the disruption of news, but it can also be an important part of the rebuilding effort. Microsoft, and its Democracy Forward program, provide a host of tools and services to help journalists and newsrooms achieve more.</p>
 		  <a href="https://www.microsoft.com/en-us/corporate-responsibility/journalism-hub" class="btnLearnMore" role="button">Learn more</a>
 	  </div>
-	  </mainbody>
+	</mainbody>
   </main>
 </body>
 
