--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 	  </heading>
      <mainbody>
 	  <div class="mainleft">
-		  <img src="/assets/Account-security.png">
+		  <img src="/assets/Account-security.png" align="center">
 		  <h2>Account Security </h2>
 		  <p>In today&rsquo;s digital age, where stories are woven from bytes and pixels, protecting our accounts and sensitive information has never been more crucial. </p>
 		  <p>Here you will explore the world of account security and learn practical tips to enhance your current practices, how to outsmart cybercriminals, and protect your invaluable work. </p>
