--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
 	  <div class="mainright">
 		  <h2>Microsoft Journalism Hub</h2>
 		  <p>Healthy democracies require healthy news ecosystems. Technology has played a role in the disruption of news, but it can also be an important part of the rebuilding effort. Microsoft, and its Democracy Forward program, provide a host of tools and services to help journalists and newsrooms achieve more.</p>
-		  <a href="https://www.microsoft.com/en-us/corporate-responsibility/journalism-hub" class="btnLearnMore" role="button">Learn more</a>
+		  <a href="https://www.microsoft.com/en-us/corporate-responsibility/journalism-hub" class="LearnMore" role="button">Learn more</a>
 	  </div>
 	</mainbody>
   </main>
