--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 	  </heading>
      <mainbody>
 	  <div class="mainleft">
-		  <img src="/assets/Account-security.png" align="center">
+		  <img src="/assets/Account-security.png">
 		  <h2>Account Security </h2>
 		  <p>In today&rsquo;s digital age, where stories are woven from bytes and pixels, protecting our accounts and sensitive information has never been more crucial. </p>
 		  <p>Here you will explore the world of account security and learn practical tips to enhance your current practices, how to outsmart cybercriminals, and protect your invaluable work. </p>
@@ -38,11 +38,13 @@
 		   <a href="https://samplephoneauth.azurewebsites.net/#/course/31/item/148" class="LearnMore" role="button">Learn more</a>
 	  </div>
 	  <div class="mainleft">
+		  <img src="/assets/Feedback.png">
 		  <h2>Share your feedback</h2>
 		  <p>Thank you for participating in the pilot of our Journalist Security training. Your feedback will help us to make improvements prior to release. Please take 5-minutes to complete the form and share your feedback.  </p>
 		   <a href="https://forms.office.com/r/a245wRX0wh" class="LearnMore" role="button">Learn more</a>
 	  </div>
 	  <div class="mainright">
+		  <img src="/assets/Journalism-hub.png">
 		  <h2>Microsoft Journalism Hub</h2>
 		  <p>Healthy democracies require healthy news ecosystems. Technology has played a role in the disruption of news, but it can also be an important part of the rebuilding effort. Microsoft, and its Democracy Forward program, provide a host of tools and services to help journalists and newsrooms achieve more.</p>
 		  <a href="https://www.microsoft.com/en-us/corporate-responsibility/journalism-hub" class="LearnMore" role="button">Learn more</a>
