--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
   <main>
     <menu>
-      <div class="logo">LOGO</div>
+      <div class="logo"><img src="https://github.com/torygraf/my-first-static-web-app/blob/b334ede44c22d3af5bc97796ac421edd6628454d/src/assets/Microsoft-logo_rgb_c-gray_small.png" alt="Microsoft Logo"></div>
       <div id="mainmenu">
         <ul class="menu"><li>Tools</li><li>Stories</li><li>Topics</li><li>Support</li><li>Community</li></ul>
       </div>
@@ -28,14 +28,14 @@
 		  <h2>Account Security </h2>
 		  <p>In today&rsquo;s digital age, where stories are woven from bytes and pixels, protecting our accounts and sensitive information has never been more crucial. </p>
 		  <p>Here you will explore the world of account security and learn practical tips to enhance your current practices, how to outsmart cybercriminals, and protect your invaluable work. </p>
-		  <a href="https://samplephoneauth.azurewebsites.net/#/course/29/item/144" class="LearnMore" role="button">Learn more</a>
+		  <a href="https://journalistsecurity.azurefd.net/#/course/1/item/1" class="LearnMore" role="button">Learn more</a>
 	  </div>
 	  <div class="mainright">
 		  <img src="/assets/Incident-response.png">
 		  <h2>Incident Response</h2>
 		  <p>Prevention is the best medicine. But even the best-laid prevention measures aren’t perfect. It’s important to have a plan for when things go wrong.</p>
 			<p>You’ll often be the first and only line of support when you’ve had an incident, so in this section, we will look at being prepared for when incidents happen and provide tools and resources to build your plan.</p>
-		   <a href="https://samplephoneauth.azurewebsites.net/#/course/31/item/148" class="LearnMore" role="button">Learn more</a>
+		   <a href="https://journalistsecurity.azurefd.net/#/course/2/item/6" class="LearnMore" role="button">Learn more</a>
 	  </div>
 	  <div class="mainleft">
 		  <img src="/assets/Feedback.png">
