--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
   <main>
     <menu>
-      <div class="logo"><img src="https://github.com/torygraf/my-first-static-web-app/blob/b334ede44c22d3af5bc97796ac421edd6628454d/src/assets/Microsoft-logo_rgb_c-gray_small.png" alt="Microsoft Logo"></div>
+      <div class="logo"><img src="/assets/Microsoft-logo_rgb_c-gray_small.png" alt="Microsoft Logo"></div>
       <div id="mainmenu">
         <ul class="menu"><li>Tools</li><li>Stories</li><li>Topics</li><li>Support</li><li>Community</li></ul>
       </div>
