--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
 		  <p>Here you will explore the world of account security and learn practical tips to enhance your current practices, how to outsmart cybercriminals, and protect your invaluable work. </p>
 		  <a href="https://journalistsecurity.azurefd.net/#/course/1/item/1" class="LearnMore" role="button">Learn more</a>
 	  </div>
+	     <div class="middleColumn">&nbsp</div>
 	  <div class="mainright">
 		  <img src="/assets/Incident-response.png">
 		  <h2>Incident Response</h2>
@@ -43,6 +44,7 @@
 		  <p>Thank you for participating in the pilot of our Journalist Security training. Your feedback will help us to make improvements prior to release. Please take 5-minutes to complete the form and share your feedback.  </p>
 		   <a href="https://forms.office.com/r/a245wRX0wh" class="LearnMore" role="button">Learn more</a>
 	  </div>
+	     	     <div class="middleColumn">&nbsp</div>
 	  <div class="mainright">
 		  <img src="/assets/Journalism-hub.png">
 		  <h2>Microsoft Journalism Hub</h2>
